r416
--Minor updates to e2 fuel functions

*r417
--Fixed errors on gearbox when networked data hasn't been received

*r419
--Updated several sounds with fixed versions, courtesy of Switchblade

*r420
--Temporarily reverted ductility behaviour until armour tool gets properly fixed
--Armour tool should now apply intended amount of armor

*r422
--New armor properties tool

*r425
--Fixed total mass calc

*r427
--Rebalanced CVTs; small and medium nerfed, large buffed